Upgrade Gradle and all Frameworks to latest Refactored code a bit using streams